# Stack-apps

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: .dockerignore  Dockerfile  app.py  config.py  db.py  pyproject.toml
nginx/: nginx.conf
