[project]
name = "stack-app"
version = "1.0.0"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi==0.115.8",
    "uvicorn==0.34.0",
    "pydantic==2.10.6",
    "psycopg[binary]==3.2.4",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "ruff==0.9.6",
    "httpx==0.28.1",
]